ci: cache Playwright browser binaries to speed up CI

--- a/Documents/PlaywrightDemo/.github/workflows/ci.yml
+++ b/Documents/PlaywrightDemo/.github/workflows/ci.yml
@@ -35,6 +35,16 @@ jobs:
         with:
           node-version: '18'
 
+      - name: Cache Playwright browsers
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/ms-playwright
+            ~/.cache/playwright
+          key: ${{ runner.os }}-playwright-${{ matrix.java-version }}-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-playwright-
+
       - name: Install Playwright browsers (official Action)
         uses: microsoft/playwright-github-action@v1
         with:
