--- a/Documents/PlaywrightDemo/.github/workflows/ci.yml
+++ b/Documents/PlaywrightDemo/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        java-version: [21, 25]
+        java-version: [21]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
